# Lab--6

./: CMakeLists.txt  FunctionsLab.cpp  FunctionsLab.h  class.h  functions.cpp  main.cpp  tests.cpp  tests.h
Functions/: FunctionsLab.cpp  FunctionsLab.h
TestsLab6/: TestsForDivision.cpp  TestsForMultiply.cpp  TestsForNum&Den.cpp  TestsForSum.cpp
